Fixed thhe tic tac toe game height on mobile and removed type it out on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,14 @@ body {
      letter-spacing: 1px;
      line-height: 2.6rem;
    }
+
+   .type-col {
+     display: none !important;
+   }
+
+   #board {
+    min-height: 500px;
+   }
   
 
   .mb-resp {
